Reimplemented check for voucher reversal request in canProvisionVoucher() Code cleanup and reformatting, modernised code style in exception mapper.